--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[(6, 1)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,9 +219,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Feel free to use the output_at function in solving this\n",
     "\n",
@@ -247,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +281,7 @@
        "12"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +349,7 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "d40eed82-bacf-11e9-9d15-6b1cdb878545",
+         "uid": "a55dfdfe-bce4-11e9-a630-8f5626cfa749",
          "x": [
           -10,
           -9,
@@ -372,7 +397,7 @@
         },
         {
          "type": "scatter",
-         "uid": "d40ef1ce-bacf-11e9-9d15-6b1cdb878545",
+         "uid": "a55e0178-bce4-11e9-a630-8f5626cfa749",
          "x": [
           1,
           5,
@@ -388,10 +413,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"8af6740b-1308-4599-a211-a91cfb3019ff\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8af6740b-1308-4599-a211-a91cfb3019ff\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"d445c758-bacf-11e9-9d15-6b1cdb878545\"}, {\"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"d445cb18-bacf-11e9-9d15-6b1cdb878545\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"193c6721-ab8e-4590-b2e7-59fa95268693\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"193c6721-ab8e-4590-b2e7-59fa95268693\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"a5a9a4fc-bce4-11e9-a630-8f5626cfa749\"}, {\"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"a5a9a8da-bce4-11e9-a630-8f5626cfa749\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"8af6740b-1308-4599-a211-a91cfb3019ff\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8af6740b-1308-4599-a211-a91cfb3019ff\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"d445c758-bacf-11e9-9d15-6b1cdb878545\"}, {\"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"d445cb18-bacf-11e9-9d15-6b1cdb878545\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"193c6721-ab8e-4590-b2e7-59fa95268693\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"193c6721-ab8e-4590-b2e7-59fa95268693\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"a5a9a4fc-bce4-11e9-a630-8f5626cfa749\"}, {\"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"a5a9a8da-bce4-11e9-a630-8f5626cfa749\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -414,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +448,7 @@
        "{'x': [1, 5, 9], 'y': [-56, 64, 184]}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +481,7 @@
        " 'text': []}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +541,7 @@
        " 'text': []}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
